# operational-services

./: .gitignore  .safety-project.ini  README.md  pyproject.toml
.github/actions/build-wheel/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/publish-docker/: action.yml
.github/scripts/: git_debug_image.sh
.github/workflows/: check-code-quality.yml  publish-binaries.yml
object_storage_access_manager/: pyproject.toml
object_storage_access_manager/.github/: Dockerfile
object_storage_access_manager/.github/actions/publish-docker/: action.yml
object_storage_access_manager/.github/scripts/: git_debug_image.sh
object_storage_access_manager/.github/workflows/: publish-binaries.yml
object_storage_access_manager/osam/: main.py  opentelemetry.py  tasks.py
object_storage_access_manager/osam/utils/: cloud_provider_api_handler.py  keycloak_handler.py  tools.py
object_storage_access_manager/tests/: conftest.py  test_tasks.py
object_storage_access_manager/tests/resources/: expiration_bucket.csv
object_storage_access_manager/tests/utils/: __init__.py  test_tools.py
